fixed the image broken icon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button id="get-weather-btn">Get Weather</button>
       <div id="weatherOutput">
         <h3 id="city-name"></h3>
-        <img id="weatherIcon" alt="Weather Icon">
+        <img id="weather-Icon" src="" alt="Weather Icon">
         <p id="temp"></p>
         <p id="weather-description"></p>
       </div>
